test/testdata/classes/instance/blank_field_assignment_error.lox
class Foo {
  init() {
    this._ = 2; // error: _ cannot be used as a field name
  }
}
Foo();
